[Empty states] Add visuals + fix icon spacing (#3830)
* Fix empty state spacing

* Add visuals in stories

* edit display

* Revert display

* edit display

--- a/packages/scss/src/components/emptyState/component.scss
+++ b/packages/scss/src/components/emptyState/component.scss
@@ -36,6 +36,9 @@
 		.emptyState-content-icon {
 			--components-emptyState-icon-background-color: var(--palettes-100, var(--palettes-product-100));
 			--components-emptyState-icon-action-color: var(--palettes-600, var(--palettes-brand-600));
+
+			display: inline-flex;
+			margin-block-end: var(--pr-t-spacings-200);
 		}
 
 		.emptyState-content-text {
